Server -- Refactoring Models, Routes and Controllers

--- a/server/seed/Tasks.json
+++ b/server/seed/Tasks.json
@@ -1,26 +1,93 @@
 [
   {
     "name": "Mencari Kata Konjungsi",
+    "date": "2012-04-23T18:25:43.511Z",
+    "questions": [
+      "Cara Membaca Kata Konjungsi",
+      "Menulis Surat Dengan Kalimat Konjungsi"
+    ],
+    "references": [
+      "Buku Paket Halaman 32",
+      "LKS Halaman 12"
+    ],
     "subjectName": "Bahasa Indonesia"
   },
   {
     "name": "Penjumlahan Berpangkat",
+    "date": "2017-04-23T18:25:43.511Z",
+    "questions": [
+      "Cara Membaca Kata Konjungsi",
+      "Menulis Surat Dengan Kalimat Konjungsi"
+    ],
+    "references": [
+      "Buku Paket Halaman 32",
+      "LKS Halaman 12"
+    ],
     "subjectName": "Matematika"
   },
   {
-    "name": "Gaya Pantul dan Dorong",
-    "subjectName": "IPA Terpadu"
-  },
-  {
-    "name": "Lensa Cembung dan Cekung",
-    "subjectName": "IPA Terpadu"
-  },
-  {
-    "name": "Kebutuhan Pokok",
-    "subjectName": "IPS Terpadu"
-  },
-  {
     "name": "Rukun Islam",
+    "date": "2019-04-23T18:25:43.511Z",
+    "questions": [
+      "Cara Membaca Kata Konjungsi",
+      "Menulis Surat Dengan Kalimat Konjungsi"
+    ],
+    "references": [
+      "Buku Paket Halaman 32",
+      "LKS Halaman 12"
+    ],
     "subjectName": "Pendidikan Agama"
+  },
+  {
+    "name": "Alat Musik Indonesia",
+    "date": "2012-04-23T18:25:43.511Z",
+    "questions": [
+      "Cara Membaca Kata Konjungsi",
+      "Menulis Surat Dengan Kalimat Konjungsi"
+    ],
+    "references": [
+      "Buku Paket Halaman 32",
+      "LKS Halaman 12"
+    ],
+    "subjectName": "Seni Budaya"
+  },
+  {
+    "name": "Pengesahan Pancasila",
+    "date": "2012-05-23T18:25:43.511Z",
+    "questions": [
+      "Cara Membaca Kata Konjungsi",
+      "Menulis Surat Dengan Kalimat Konjungsi"
+    ],
+    "references": [
+      "Buku Paket Halaman 32",
+      "LKS Halaman 12"
+    ],
+    "subjectName": "PKN"
+  },
+  {
+    "name": "Sepak Bola dan Sepak Takraw",
+    "date": "2012-04-23T18:25:43.511Z",
+    "questions": [
+      "Cara Membaca Kata Konjungsi",
+      "Menulis Surat Dengan Kalimat Konjungsi"
+    ],
+    "references": [
+      "Buku Paket Halaman 32",
+      "LKS Halaman 12"
+    ],
+    "subjectName": "Penjaskes"
+  },
+  {
+    "name": "Menulis Surat Resmi",
+    "date": "2012-04-23T18:25:43.511Z",
+    "questions": [
+      "Cara Membaca Kata Konjungsi",
+      "Menulis Surat Dengan Kalimat Konjungsi"
+    ],
+    "references": [
+      "Buku Paket Halaman 32",
+      "LKS Halaman 12"
+    ],
+    "subjectName": "Bahasa Indonesia"
   }
 ]
