--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
