--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sparing-software/v-clamp": "^1.0.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "lodash": "^4.17.15",
@@ -16,6 +17,7 @@
     "register-service-worker": "^1.7.1",
     "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
+    "vue-clamp": "^0.3.0",
     "vue-mq": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
