Refactor Controllers and Implement New Feature

--- a/server/seed/Tasks.json
+++ b/server/seed/Tasks.json
@@ -6,10 +6,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Bahasa Indonesia",
     "background": "bg-light-200"
   },
@@ -20,10 +17,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Matematika",
     "background": "bg-red"
   },
@@ -34,10 +28,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Pendidikan Agama",
     "background": "bg-green"
   },
@@ -48,10 +39,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Seni Budaya",
     "background": "bg-orange"
   },
@@ -62,10 +50,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "PKN",
     "background": "bg-yellow"
   },
@@ -76,10 +61,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Penjaskes",
     "background": "bg-blue"
   },
@@ -90,10 +72,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Bahasa Indonesia",
     "background": "bg-light-200"
   },
@@ -104,10 +83,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Bahasa Indonesia",
     "background": "bg-light-200"
   },
@@ -118,10 +94,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Matematika",
     "background": "bg-red"
   },
@@ -132,10 +105,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Pendidikan Agama",
     "background": "bg-green"
   },
@@ -146,10 +116,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Seni Budaya",
     "background": "bg-orange"
   },
@@ -160,10 +127,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "PKN",
     "background": "bg-yellow"
   },
@@ -174,10 +138,7 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Penjaskes",
     "background": "bg-blue"
   },
@@ -188,24 +149,18 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Bahasa Indonesia",
     "background": "bg-light-200"
   },
-   {
+  {
     "name": "Menulis Sajak dan Cerita Legenda",
     "date": "2012-02-23T18:25:43.511Z",
     "questions": [
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Bahasa Indonesia",
     "background": "bg-light-200"
   },
@@ -216,25 +171,20 @@
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Penjaskes",
     "background": "bg-blue"
   },
-   {
+  {
     "name": "Masa Penjajahan Bangsa Belanda dan Jepang",
     "date": "2012-10-23T18:25:43.511Z",
     "questions": [
       "Cara Membaca Kata Konjungsi",
       "Menulis Surat Dengan Kalimat Konjungsi"
     ],
-    "references": [
-      "Buku Paket Halaman 32",
-      "LKS Halaman 12"
-    ],
+    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "PKN",
     "background": "bg-yellow"
   }
 ]
+
