--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "heroku-postbuild": "npm run build-client && npm run install-server",
     "start": "node server/src/app.js",
-    "build-client": "cd /client && npm install && npm run build",
+    "build-client": "cd /client && npm install",
     "install-server": "cd ./server && npm install"
   },
   "cacheDirectories": [
