--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.11"
   },
   "devDependencies": {
