--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.3.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.11"
+    "sequelize": "^5.21.11",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
