--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "heroku-postbuild": "npm install && npm run seed",
     "start": "node ./node_modules/nodemon/bin/nodemon.js src/app.js 'npm run lint'",
     "lint": "node ./node_modules/.bin/eslint **/*.js",
     "seed": "node seed/index.js"
@@ -38,5 +39,12 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.0.5"
-  }
+  },
+  "engines": {
+    "node": "10.x",
+    "npm": "6.x"
+  },
+  "cacheDirectories": [
+    "node_modules"
+  ]
 }
