Server -- Refactor and Add File(s)

--- a/server/seed/Tasks.json
+++ b/server/seed/Tasks.json
@@ -8,183 +8,7 @@
     ],
     "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
     "subjectName": "Bahasa Indonesia",
-    "background": "bg-light-200"
-  },
-  {
-    "name": "Penjumlahan dan Pengurangan Bersusun",
-    "date": "2017-04-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Matematika",
-    "background": "bg-red"
-  },
-  {
-    "name": "Rukun Islam",
-    "date": "2019-04-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Pendidikan Agama",
-    "background": "bg-green"
-  },
-  {
-    "name": "Alat Musik Indonesia",
-    "date": "2012-04-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Seni Budaya",
-    "background": "bg-orange"
-  },
-  {
-    "name": "Pengesahan Pancasila",
-    "date": "2012-05-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "PKN",
-    "background": "bg-yellow"
-  },
-  {
-    "name": "Sepak Bola dan Sepak Takraw",
-    "date": "2012-04-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Penjaskes",
-    "background": "bg-blue"
-  },
-  {
-    "name": "Menulis Surat Resmi",
-    "date": "2012-04-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Bahasa Indonesia",
-    "background": "bg-light-200"
-  },
-  {
-    "name": "Menulis Kalimat Imbuhan Pada Kata atau Kalimat",
-    "date": "2012-04-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Bahasa Indonesia",
-    "background": "bg-light-200"
-  },
-  {
-    "name": "Perkalian dan Pembagian Bilangan Berpangkat",
-    "date": "2017-03-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Matematika",
-    "background": "bg-red"
-  },
-  {
-    "name": "Iman Kepada Malaikat dan Takdir Baik dan Buruk",
-    "date": "2019-07-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Pendidikan Agama",
-    "background": "bg-green"
-  },
-  {
-    "name": "Jenis Tari Tradisional Khas Indonesia",
-    "date": "2012-01-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Seni Budaya",
-    "background": "bg-orange"
-  },
-  {
-    "name": "Proklamasi dan Kemerdekaan Bangsa Indonesia",
-    "date": "2012-05-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "PKN",
-    "background": "bg-yellow"
-  },
-  {
-    "name": "Permainan Bola Besar dan Bola Kecil",
-    "date": "2012-03-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Penjaskes",
-    "background": "bg-blue"
-  },
-  {
-    "name": "Membaca dan Menulis Puisi serta Pantun",
-    "date": "2012-02-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Bahasa Indonesia",
-    "background": "bg-light-200"
-  },
-  {
-    "name": "Menulis Sajak dan Cerita Legenda",
-    "date": "2012-02-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Bahasa Indonesia",
-    "background": "bg-light-200"
-  },
-  {
-    "name": "Bermain Bola Kasti dan Tenis",
-    "date": "2012-08-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "Penjaskes",
-    "background": "bg-blue"
-  },
-  {
-    "name": "Masa Penjajahan Bangsa Belanda dan Jepang",
-    "date": "2012-10-23T18:25:43.511Z",
-    "questions": [
-      "Cara Membaca Kata Konjungsi",
-      "Menulis Surat Dengan Kalimat Konjungsi"
-    ],
-    "references": ["Buku Paket Halaman 32", "LKS Halaman 12"],
-    "subjectName": "PKN",
-    "background": "bg-yellow"
+    "background": "bg-light-200",
+    "subthemeIdNumber": "1"
   }
 ]
-
