Server -- Add AuthControllers For Authentication

--- a/server/seed/Tasks.json
+++ b/server/seed/Tasks.json
@@ -10,5 +10,17 @@
     "subjectName": "Bahasa Indonesia",
     "background": "bg-light-200",
     "subthemeId": "1"
+  },
+  {
+    "name": "Menghitung Gaya",
+    "date": "2012-05-23T18:25:43.511Z",
+    "questions": [
+      "Jumlah apabila diketahui kamu adalah penjahat",
+      "Kecepatan yang diambil dari kecepatan yang diberi"
+    ],
+    "references": ["Buku Paket Kelas 2", "Buku mewarnai TK"],
+    "subjectName": "Matematika",
+    "background": "bg-red",
+    "subthemeId": "1"
   }
 ]
