--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "@sparing-software/v-clamp": "^1.0.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "^1.4.6",
+    "typeface-roboto": "0.0.75",
+    "typeface-roboto-condensed": "0.0.75",
     "vue": "^2.6.11",
     "vue-clamp": "^0.3.0",
     "vue-mq": "^1.0.1",
