--- a/client/package.json
+++ b/client/package.json
@@ -13,37 +13,37 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
-    "tailwindcss": "^1.4.6",
+    "tailwindcss": "^1.9.3",
     "typeface-roboto": "0.0.75",
     "typeface-roboto-condensed": "0.0.75",
-    "vue": "^2.6.11",
-    "vue-clamp": "^0.3.0",
+    "vue": "^2.6.12",
+    "vue-clamp": "^0.3.1",
     "vue-mq": "^1.0.1",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
+    "vue-router": "^3.4.7",
+    "vuex": "^3.5.0",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-pwa": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-unit-mocha": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-pwa": "^4.4.6",
+    "@vue/cli-plugin-router": "^4.4.6",
+    "@vue/cli-plugin-unit-mocha": "^4.4.6",
+    "@vue/cli-plugin-vuex": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.11",
-    "vuex-persistedstate": "^3.0.1"
+    "vue-template-compiler": "^2.6.12",
+    "vuex-persistedstate": "^3.1.0"
   }
 }
